Add patch to transform redirects into operation wrappers
Fixes #172